tests/paczka1/fuzzy1/24373899.err
Error in line 2: zK1ilsMI6Ta S253 73,0
Error in line 13: wBmV A706 14,1
Error in line 19: TUL3aS5 A977 7,7
Error in line 21: TUL3aS5 S253 88,9
Error in line 27: TUL3aS5 S420 64,1
Error in line 35: zK1ilsMI6Ta S253 18,8
